--- a/e2e/android/app/src/main/res/values/strings.xml
+++ b/e2e/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidObservability</string>
+    <string name="title_activity_secondary">SecondaryActivity</string>
 </resources>
